# battery-data-format

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  docs-deploy.yml
docs/: conf.py  get_started.rst  index.rst  plugins.rst  reference.rst  user_guide.rst
docs/_ext/: generate_plugins_doc.py
docs/examples/: index.rst  ingest.ipynb  metadata.ipynb  metadata_parser.ipynb  ontology_spec_and_units.ipynb  plugins.ipynb  quickstart.ipynb  read.ipynb  registry.ipynb  remote_sources.py  repair.ipynb  table_normalizers.ipynb  table_parser.ipynb  validate.ipynb  visualization.ipynb
docs/examples/in/ingest/example_raw_data_collection/g20m7/: battery.json  contribution.json  person.json
docs/examples/in/ingest/example_raw_data_collection/nacr32140mp10/: battery.json  contribution.json  person.json
docs/examples/in/registry/google/g20m7/202512/: metadata.jsonld
docs/examples/in/registry/google/g20m7/202512/c5hnd9/: metadata.jsonld
docs/examples/in/registry/google/g20m7/202512/gru6mv/: metadata.jsonld
docs/examples/in/registry/google/g20m7/202512/kcsb0s/: metadata.jsonld
docs/examples/in/registry/hina/nacr32140-mp10/202410/: metadata.jsonld
docs/examples/in/registry/hina/nacr32140-mp10/202410/3gvjz6/: metadata.jsonld
docs/examples/in/registry/hina/nacr32140-mp10/202410/9peqy1/: metadata.jsonld
docs/examples/in/registry/hina/nacr32140-mp10/202410/e6yezv/: metadata.jsonld
docs/examples/in/registry/hina/nacr32140-mp10/202410/mhpggp/: metadata.jsonld
docs/examples/in/registry/hina/nacr32140-mp10/202410/r30yqg/: metadata.jsonld
docs/examples/in/registry/hina/nacr32140-mp10/202410/v0pygf/: metadata.jsonld
docs/examples/in/registry/hina/nacr32140-mp10/202410/wv5jgv/: metadata.jsonld
docs/examples/in/registry/hina/nacr32140-mp10/202410/z1nxja/: metadata.jsonld
docs/examples/in/registry/melasta/slpba842126hv/202410/: metadata.jsonld
docs/examples/in/registry/melasta/slpba842126hv/202410/aampje/: metadata.jsonld
docs/examples/in/registry/melasta/slpba842126hv/202410/hqmg7h/: metadata.jsonld
docs/examples/in/registry/melasta/slpba842126hv/202410/p0jqc2/: metadata.jsonld
docs/examples/in/registry/melasta/slpba842126hv/202410/qv8zn1/: metadata.jsonld
docs/examples/in/registry/melasta/slpba842126hv/202410/tfscsy/: metadata.jsonld
docs/examples/in/registry/panasonic/ncr18650pf/201707/: metadata.jsonld
docs/examples/in/registry/panasonic/ncr18650pf/201707/wykht8/: metadata.jsonld
docs/examples/in/registry/samsung/inr2170030t/2022/: metadata.jsonld
docs/examples/in/registry/samsung/inr2170030t/2022/C1202/: metadata.jsonld
docs/examples/in/registry/tesla/inr46800/2022/: metadata.jsonld
docs/examples/in/registry/tesla/inr46800/2022/083828/: metadata.jsonld
docs/examples/in/registry/tesla/inr46800/2022/131828/: metadata.jsonld
docs/examples/in/registry/tesla/inr46800/2022/186828/: metadata.jsonld
docs/examples/in/registry/tesla/inr46800/2022/444828/: metadata.jsonld
docs/examples/in/registry/tesla/inr46800/2022/536828/: metadata.jsonld
docs/examples/in/registry/tesla/inr46800/2022/549828/: metadata.jsonld
docs/examples/in/registry/tesla/inr46800/2022/550828/: metadata.jsonld
docs/examples/in/registry/tesla/inr46800/2022/601828/: metadata.jsonld
docs/examples/reference/: DLR__LiGrHydra0b__20230131__POCV__25degC__Basytec.bdf.csv  DLR__LiLNMOHydra0b__20221125__POCV__25degC__Basytec.bdf.csv  SINTEF__G20M7-202512-Gru6mV__20251228__C30__25degC__Neware.bdf.csv  SINTEF__LiGrR2032__2024-04-30__25degC__Landt.bdf.csv  SINTEF__SLPBA842124HV__2024-10-23__Rate_25degC__Neware__Time_Bug.bdf.csv
scripts/: generate_zenodo_reference_bdf.py  warm_cache.py
src/bdf/: __init__.py  _explore.py  cli.py  fetch.py  file_utils.py  io.py  metadata.py  plugins.py  spec.py  table_normalizers.py  table_parsers.py  validate.py  visualize.py
src/bdf/data/: bdf-ontology-snapshot.ttl
tests/data/mpr/: GCPL-0.mpr  MB-0.mpr  MB-1.mpr  PEIS-0.mpr
tests/integration/: test_cases.py  test_notebooks.py  test_plugins.py  test_pybamm_exports.py  test_raw_loading.py  test_table_normalizers.py
tests/unit/: test_cli.py  test_fetch.py  test_file_utils.py  test_ingest.py  test_io.py  test_notebook_remote_sources.py  test_ontology_labels.py  test_plugins.py  test_read.py  test_repair.py  test_spec_ontology.py  test_table_normalizers.py  test_table_parsers.py  test_validate.py  test_warm_cache.py
