[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "batterydf"
version = "0.1.0"
description = "Battery Data Format: load, convert, visualize, and publish"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Battery Data Alliance" }]
keywords = ["battery", "data", "time-series", "bdf", "csv", "parquet"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24,<3.0",
  "pandas>=2.0",
  "pyarrow>=15.0",
  "rdflib>=7.0",
  "typer>=0.12",
  "rich>=13.7",
  "matplotlib>=3.8",
  "plotly",
  "nbformat>=4.2",
  "openpyxl>=3.1",
  "pydantic>=2.6",
  "requests>=2.31",
  "pint>=0.22",
  "NewareNDA",
  "platformdirs>=4.10.0",
  "polars>=1.41.2",
]

[project.urls]
Homepage = "https://github.com/battery-data-alliance/battery-data-format"
Issues   = "https://github.com/battery-data-alliance/battery-data-format/issues"

[project.scripts]
bdf = "bdf.cli:app"
bdf-update-snapshot = "bdf.spec:_update_snapshot_cli"

[project.optional-dependencies]
fastnda = ["fastnda"]
polars = ["polars", "fastnda"]
hvplot = ["hvplot", "holoviews", "bokeh"]
numpy2 = ["numpy>=2.0,<3.0"]
yaml = [
    "pyyaml>=6.0.3",
]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-socket",
  # ruff and mypy are also run via pre-commit; pinned here to the same versions
  # so CI (which invokes `python -m ruff`/`python -m mypy`) matches local hooks.
  "ruff==0.15.12",
  "mypy==1.20.2",
  "types-requests",
  "types-PyYAML",
  "nbclient>=0.9",
  "nbformat>=5.9",
  "ipykernel>=6.0",
  "pre-commit>=4.6.0",
]
pybamm-test = [
  "pybamm",
]
docs = [
  "sphinx>=7.0",
  "pydata-sphinx-theme>=0.15",
  "sphinx-autobuild>=2024.4.16",
  "sphinx-design>=0.6",
  "myst-nb>=1.1",
  "jupyter-cache>=1.0",
  "ipykernel>=6.29",
]
excel = [
    "fastexcel>=0.20.2",
]
mat = [
    "scipy>=1.15.3",
]


[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --disable-warnings --disable-socket --ignore=tests/integration/test_raw_loading.py"
testpaths = ["tests"]
markers = [
  "slow: may be slow or large I/O",
  "network: requires internet access",
  "live_network: needs a live socket even with a warm cache",
  "registry: uses remote registry on Zenodo",
  "golden: compares against golden files",
  "perf: performance/smoke thresholds",
  "notebooks: executes example notebooks",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/bdf",
]
include = [
  "src/bdf/schemas/*.json",
  "src/bdf/data/bdf-ontology-snapshot.ttl",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/bdf/**",
  "src/bdf/schemas/*.json",
  "src/bdf/data/bdf-ontology-snapshot.ttl",
  "README.md",
  "pyproject.toml",
]
